--- a/views/home.html
+++ b/views/home.html
@@ -9,31 +9,40 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <title>Mercadoliebre</title>
+  <title>MercadoLiebre</title>
 </head>
 
 <body style="margin: 0px 0px 0px 0px;">
 
   <header> 
       <div class="row">
-        <a href="/"><img class="logo" src="./images/logo-mercado-liebre.svg" alt="No image"></a>
-        <div class="row" id="input">
-          <input class="search" type="text" name="input" placeholder="Buscar productos..." size="50">
-          <div class="search-ico"><i class="fas fa-search" style="margin: 8px;"></i></div>
+
+        <div class="nav-col">
+          <a href="/"><img class="logo" src="./images/logo-mercado-liebre.svg" alt="No image"></a>
         </div>
-        <nav>
-          <ul class="nav-menu-list">
-            <li><a href="#">Creá tu cuenta <i class="fas fa-id-card"></i></a></li>
-            <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i> </a></li>
-            <li><a href="#">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
-          </ul>
-        </nav>
-        <div class="burger-menu">
-            <i class="fas fa-bars" style="margin: 6px;"></i>
+
+        <div class="nav-col">
+          <div class="row-input" id="input">
+            <input class="search" type="text" name="input" placeholder="Buscar productos..." size="50">
+            <div class="search-ico"><i class="fas fa-search" style="margin: 8px;"></i></div>
+          </div>
         </div>
+
+          <div class="burger-menu">
+            <div class="nav-col">
+              <i class="fas fa-bars" style="margin: 6px;"></i>
+            </div>
+          </div>
+        
+        <div class="nav-col" id="text">
+          <div class="row">
+            <span class="text-nav"><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</span>
+          </div>
+        </div>
+
       </div>
 
-      <div class="row">
+      <div class="row-nav">
         <nav>
           <ul class="nav-menu-list">
             <li><a href="#">Ofertas</a></li>
@@ -42,9 +51,14 @@
             <li><a href="#">Ayuda</a></li>
           </ul>
         </nav>
+        <nav>
+          <ul class="nav-menu-list">
+            <li><a href="#">Creá tu cuenta <i class="fas fa-id-card"></i></a></li>
+            <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i> </a></li>
+            <li><a href="#">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
+          </ul>
+        </nav>
       </div>
-
-      <span class="text-nav"><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</span>
   </header>
 
     <div class="banner" >
