--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Roboto', sans-serif;
+  background-color: #ededed;
 }
 
 /*HEADER*/
@@ -47,7 +48,8 @@ a{
   align-items: center;
 }
 
-input[type=text] {
+input[type=text],
+input[type=password]{
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -55,7 +57,7 @@ input[type=text] {
 }
 
 input:focus{
-  outline: none;
+  outline: 0;
 }
 
 li{
@@ -158,6 +160,8 @@ main{
 }
 
 
+
+/*MEDIA QUERIES*/
 
 @media (min-width: 1024px) {
   
