--- a/views/register.html
+++ b/views/register.html
@@ -47,7 +47,7 @@
           <nav>
             <ul class="nav-menu-list">
               <li><a href="/register">Creá tu cuenta <i class="fas fa-id-card"></i></a></li>
-              <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i> </a></li>
+              <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i> </a></li>
               <li><a href="#">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
           </nav>
