--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -124,6 +124,7 @@ main{
   margin-top: 25px;
   font-size: 15px;
   color: #888888;
+  
 }
 
 .article{
@@ -165,12 +166,26 @@ main{
 
 @media (min-width: 1024px) {
   
-  .card {
+  .card:hover {
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
   }
-  .name-art{
+  .card:hover .name-art{
     display: inline;
   }
+  .card:hover .fas{
+    animation: myAnim 2s ease 0s 1 normal forwards;
+  }
+
+  @keyframes myAnim {
+    0% {
+      transform: translateX(0);
+    }
+  
+    100% {
+      transform: translateX(200px);
+    }
+  }
+
   .burger-menu{
     display: none;
   }
