--- a/views/home.html
+++ b/views/home.html
@@ -68,7 +68,7 @@
   <h2 style="font-size: 24px;">Basado en tu ultima visita: </h2>
   
   <main>
-      <div class="card">
+      <article class="card">
         <div class="images">
           <img src="./images/img-cafetera-moulinex.jpg">
         </div>
@@ -78,9 +78,9 @@
           <span style="color: green;">40% off</span>
           <span class="name-art">Cafetera Moulinex</span>
         </div>
-      </div>
+      </article>
 
-      <div class="card">
+      <article class="card">
         <div class="images">
           <img src="./images/img-macbook-pro-2019.jpg">
         </div>
@@ -90,9 +90,9 @@
           <span style="color: green;">20% off</span>
           <span class="name-art">MacBook Pro 2019</span> 
         </div>
-      </div>
+      </article>
 
-      <div class="card">
+      <article class="card">
         <div class="images">
           <img src="./images/img-samsung-galaxy-s10.jpg">
         </div>
@@ -102,10 +102,10 @@
           <span style="color: green;">10% off</span>
           <span class="name-art">Samsung Galaxy S10</span> 
         </div>
-      </div>
+      </article>
 
       
-      <div class="card">
+      <article class="card">
         <div class="images">
           <img src="./images/img-tv-samsung-smart.jpg">
         </div>
@@ -115,7 +115,57 @@
           <span style="color: green;">5% off</span>
           <span class="name-art">SmartTv Samsung 43"</span>
         </div>
-      </div>
+      </article>
+
+      <h2 style="font-size: 24px;">Ofertas: </h2>
+
+      <article class="card">
+        <div class="images">
+          <img src="./images/bicicleta.webp">
+        </div>
+        <div class="article">
+          <div><i class="fas fa-truck"></i></div>
+          <span class="price">$45.399</span>
+          <span style="color: green;">8% off</span>
+          <span class="name-art">Bicicleta MTB Sunny Aluminio R29</span>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="images">
+          <img src="./images/lavaropas.webp">
+        </div>
+        <div class="article">
+          <div><i class="fas fa-truck"></i></div>
+          <span class="price">$90.399</span>
+          <span style="color: green;">24% off</span>
+          <span class="name-art">Lavarropas automático Electrolux Premium 9kg</span>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="images">
+          <img src="./images/iphone.webp" >
+        </div>
+        <div class="article">
+          <div><i class="fas fa-truck"></i></div>
+          <span class="price">$340.700</span>
+          <span style="color: green;">10% off</span>
+          <span class="name-art">Apple iPhone 13 (256 GB)</span>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="images">
+          <img src="./images/zapatillas.webp" >
+        </div>
+        <div class="article">
+          <div><i class="fas fa-truck"></i></div>
+          <span class="price">$25.959</span>
+          <span style="color: green;">4% off</span>
+          <span class="name-art">Zapatillas Nike Revolution 6</span>
+        </div>
+      </article>
 
   </main>
 
