--- a/views/register.html
+++ b/views/register.html
@@ -149,9 +149,12 @@
           </div>
         </section>
 
-        <section class="row-btn">
+        <div class="row-btn">
             <button class="btn" type="submit">Enviar</button>
-        </section>
+        </div>
+        <div class="row-btn">
+          <button class="btn-reset" type="reset">Borrar campos</button>
+      </div>
       </form>
     </div>
 
